fixed missing background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -339,7 +339,7 @@ html {
 
 body {
   box-sizing: border-box;
-  background-image: url("assets/images/blackhearts.jpeg");
+  background-image: url("../images/blackhearts.jpeg");
   background-repeat: no-repeat;
   background-position: 0px 4px;
   background-size: cover;
